# paragpt

./: etl.py  frontend.py  pyproject.toml  readme.md  requirements.txt
src/paragpt/: __init__.py  extraction.py
src/paragpt/cache/: __init__.py  _base.py  _df.py  _string.py
src/paragpt/transformation/: __init__.py  _embedding_grouper.py  _paraphrase.py  _remove_stop_words.py  _tokenize_and_embed.py  _vtt.py
src/paragpt/utils/: __init__.py  _conditional.py  _etl.py  _parallelize.py
