[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name         = "paragpt"
dependencies = [
    "streamlit",
    "openai",
    "tiktoken",
    "matplotlib",
    "plotly",
    "scipy",
    "scikit-learn",
    "pyarrow",
    "nltk"

]
authors = [
    {name = "Chris Mamon", email="chrisam1993@live.com"}
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/paragpt/__init__.py"